--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,6 @@ dependencies = [
     "fastapi>=0.115.12",
     "openai>=1.75.0",
     "python-dotenv>=1.1.0",
+    "schedule>=1.2.2",
     "uvicorn>=0.34.1",
 ]
